# nango_api_2207

./: README.md
nango_qa_api1/: Cargo.toml
nango_qa_api1/input/: study_qa1.csv
nango_qa_api1/output/: model_qa1.csv  word_list.csv
nango_qa_api1/src/: main.rs
nango_qa_api1/src/nlp/: tf_idf.rs
