[package]
name = "nango_qa_api1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = "0.14.0"
csv = "1.1"
lambda_runtime = "0.5.1"
serde_json = "1.0.82"
tokio = "1.20.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}