[package]
name = "nango_qa_api1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
lambda_runtime = "0.11.1"
lambda_http = "0.11.1"
serde_json = "1.0.116"
tokio = "1.37.0"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"]}
vaporetto = "0.6.3"
vaporetto_rules = "0.6.3"
zstd = "0.13.1"
query_map = "0.7.0"
lambda-apigateway-response = "0.1.1"